--- a/index.html
+++ b/index.html
@@ -1,147 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fandom Challenge</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
 
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous">
+      crossorigin="anonymous"
+    />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  
-   <!-- Main container to center content vertically and horizontally -->
+
+  <!-- Main container to center content vertically and horizontally -->
   <body>
-  <div class="container d-flex justify-content-center align-items-center min-vh-100">
-    <div class="quiz-container">
+    <div
+      class="container d-flex justify-content-center align-items-center min-vh-100"
+    >
+      <div class="quiz-container">
+        <!-- Intro and category Selection Section -->
+        <section id="category-selection">
+          <div id="home-intro" class="text-center mb-3">
+            <div class="quiz-header text-center">
+              <h1 class="mb-3">Welcome to Fandom Challenge</h1>
+            </div>
+            <p>
+              Test your knowledge with quizzes from your favourite fandoms! Each
+              quiz is randomised and challenges your knowledge and speed.
+            </p>
+          </div>
+          <h2 class="mb-4">Select a Category</h2>
 
-      <!-- Intro and category Selection Section -->
-  <section id="category-selection">
-    <div id="home-intro" class="text-center mb-3">
-  <div class="quiz-header text-center">
-  <h1 class="mb-3">Welcome to Fandom Challenge</h1>
-</div>
-  <p>
-    Test your knowledge with quizzes from your favourite fandoms! Each quiz is randomised and challenges your knowledge and speed.
-  </p>
-</div>
-        <h2 class="mb-4">Select a Category</h2>
+          <!-- Category buttons grid -->
+          <div class="d-grid gap-2">
+            <button
+              id="avatar-btn"
+              class="btn btn-danger category-btn"
+              data-category="avatar"
+              aria-label="Select category Avatar The Last Airbender"
+            >
+              Avatar: The Last Airbender
+            </button>
+            <button
+              id="got-btn"
+              class="btn btn-danger category-btn"
+              data-category="got"
+              aria-label="Select category Game of Thrones"
+            >
+              Game of Thrones
+            </button>
+            <button
+              id="opm-btn"
+              class="btn btn-danger category-btn"
+              aria-label="Select category One Punch Man"
+            >
+              One Punch Man
+            </button>
+          </div>
+          <div class="mt-3 text-center">
+            <button
+              id="view-rules-btn"
+              class="btn btn-outline-light"
+              aria-label="View quiz rules"
+            >
+              View Rules
+            </button>
+          </div>
 
-        <!-- Category buttons grid -->
-        <div class="d-grid gap-2">
-          <button id="avatar-btn" class="btn btn-danger category-btn" data-category="avatar" 
-          aria-label="Select category Avatar The Last Airbender">Avatar: The Last Airbender</button>
-          <button id="got-btn" class="btn btn-danger category-btn" data-category="got" 
-          aria-label="Select category Game of Thrones">Game of Thrones</button>
-          <button id="opm-btn" class="btn btn-danger category-btn" 
-          aria-label="Select category One Punch Man">One Punch Man</button>
-        </div>
-        <div class="mt-3 text-center">
-          <button id="view-rules-btn" class="btn btn-outline-light" aria-label="View quiz rules">View Rules</button>
-        </div>
+          <footer id="home-footer" class="text-center mt-4">
+            <p>
+              View the project on
+              <a
+                href="https://github.com/LouisCE/fandom-challenge"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                GitHub
+              </a>
+              <br />
+              Developed by Louis
+            </p>
+          </footer>
+        </section>
 
-        <footer id="home-footer" class="text-center mt-4">
-        <p>
-          View the project on
-          <a href="https://github.com/LouisCE/fandom-challenge" target="_blank" rel="noopener noreferrer">
-            GitHub
-          </a>
-        <br>
-        Developed by Louis</p>
-      </footer>
-      </section>
+        <!-- View Rules button -->
+        <section id="rules" class="hide">
+          <div class="quiz-header text-center">
+            <h1 class="mb-3">Rules</h1>
+          </div>
 
-      <!-- View Rules button -->
-  <section id="rules" class="hide">
-        <div class="quiz-header text-center">
-  <h1 class="mb-3">Rules</h1>
-</div>
+          <!-- List of quiz rules -->
+          <ul id="rules-list" class="text-start">
+            <li>Questions are randomised each time you play.</li>
+            <li>Each question has four options: A, B, C and D.</li>
+            <li>You have one minute to answer each question.</li>
+            <li>Unanswered questions count as incorrect.</li>
+          </ul>
 
-        <!-- List of quiz rules -->
-        <ul id="rules-list" class="text-start">
-          <li>Questions are randomised each time you play.</li>
-          <li>Each question has four options: A, B, C and D.</li>
-          <li>You have one minute to answer each question.</li>
-          <li>Unanswered questions count as incorrect.</li>
-        </ul>
+          <!-- Back button to category selection -->
+          <button
+            id="back-to-categories-btn"
+            class="btn btn-outline-light mt-3"
+            aria-label="Return to category selection from rules"
+          >
+            Back to Categories
+          </button>
+        </section>
 
-        <!-- Back button to category selection -->
-        <button id="back-to-categories-btn" class="btn btn-outline-light mt-3" 
-        aria-label="Return to category selection from rules">Back to Categories</button>
-      </section>
+        <!-- Quiz Section -->
+        <section id="quiz">
+          <div class="quiz-header text-center">
+            <h1 class="mb-3">Fandom Challenge</h1>
+          </div>
+          <div class="progress">
+            <div
+              class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="0"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+          <h2 class="visually-hidden">Quiz</h2>
 
-      <!-- Quiz Section -->
-  <section id="quiz">
-    <div class="quiz-header text-center">
-        <h1 class="mb-3">Fandom Challenge</h1>
+          <!-- Question text -->
+          <p id="question-text" class="question" aria-live="polite"></p>
+
+          <!-- Answer buttons -->
+          <div id="answers" class="options">
+            <button class="answer-btn btn btn-danger mb-2">A</button>
+            <button class="answer-btn btn btn-danger mb-2">B</button>
+            <button class="answer-btn btn btn-danger mb-2">C</button>
+            <button class="answer-btn btn btn-danger mb-2">D</button>
+          </div>
+
+          <!-- Timer and Restart button -->
+          <div class="quiz-footer">
+            <div id="timer" class="timer">Time left: 15s</div>
+            <button
+              id="restart-midway-btn"
+              class="btn btn-warning d-none"
+              aria-label="Restart current quiz"
+            >
+              Back to Categories
+            </button>
+          </div>
+        </section>
+
+        <!-- Results Section -->
+        <section id="results" class="results">
+          <h2 class="mb-3">Quiz Complete!</h2>
+          <div class="progress mb-3">
+            <div
+              class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              style="width: 100%"
+            ></div>
+          </div>
+
+          <!-- Display user score -->
+          <p id="score-text" class="score"></p>
+
+          <!-- Restart quiz button -->
+          <button
+            id="restart-btn"
+            class="btn btn-outline-light"
+            aria-label="Restart quiz and return to category selection"
+          >
+            Back to Categories
+          </button>
+
+          <!-- Link to leaderboard -->
+          <a
+            href="leaderboard.html"
+            id="go-to-leaderboard-btn"
+            class="btn btn-danger ms-2"
+            >Go to Leaderboard</a
+          >
+        </section>
       </div>
-    <div class="progress">
-          <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" 
-          aria-valuenow="0" aria-valuemin="0"
-    aria-valuemax="100"></div>
-        </div>
-    <h2 class="visually-hidden">Quiz</h2>
-
-    <!-- Question text -->
-        <p id="question-text" class="question" aria-live="polite"></p>
-
-        <!-- Answer buttons -->
-        <div id="answers" class="options">
-  <button class="answer-btn btn btn-danger mb-2">A</button>
-  <button class="answer-btn btn btn-danger mb-2">B</button>
-  <button class="answer-btn btn btn-danger mb-2">C</button>
-  <button class="answer-btn btn btn-danger mb-2">D</button>
-</div>
-
-<!-- Timer and Restart button -->
-        <div class="quiz-footer">
-          <div id="timer" class="timer">Time left: 15s</div>
-          <button id="restart-midway-btn" class="btn btn-warning d-none" 
-          aria-label="Restart current quiz">Back to Categories</button>
-        </div>
-      </section>
-
-      <!-- Results Section -->
-  <section id="results" class="results">
-    <div class="progress mb-3">
-  <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
-     role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-</div>
-        <h2 class="mb-3">Quiz Complete!</h2>
-        <!-- Display user score -->
-        <p id="score-text" class="score"></p>
-        <!-- Restart quiz button -->
-        <button id="restart-btn" class="btn btn-outline-light" 
-        aria-label="Restart quiz and return to category selection">Back to Categories</button>
-        <!-- Link to leaderboard -->
-        <a href="leaderboard.html" id="go-to-leaderboard-btn" 
-   class="btn btn-danger ms-2">
-   Go to Leaderboard
-</a>
-
-      </section>
     </div>
-  </div>
 
-  <!-- Confetti library -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-  <!-- JavaScript files -->
-  <script src="assets/js/questions.js"></script>
-  <!-- Quiz logic -->
-  <script src="assets/js/script.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"
-  ></script>
-</body>
+    <!-- Confetti library -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+    <!-- JavaScript files -->
+    <script src="assets/js/questions.js"></script>
+    <!-- Quiz logic -->
+    <script src="assets/js/script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
