--- a/leaderboard.html
+++ b/leaderboard.html
@@ -59,13 +59,13 @@
 </div>
 
           <!-- Action buttons for submitting score and going back -->
-          <div class="d-flex justify-content-center gap-2">
-            <button id="submit-score-btn" class="btn btn-danger btn-sm" aria-label="Submit your score">
-              Submit Score
-            </button>
-            <a href="index.html" class="btn btn-outline-light btn-sm" 
-            aria-label="Return to quiz category selection">Back to Categories</a>
-          </div>
+          <div class="d-flex justify-content-center gap-2 mt-3 w-100">
+  <button id="submit-score-btn" class="btn btn-danger" aria-label="Submit your score">
+    Submit Score
+  </button>
+  <a href="index.html" class="btn btn-outline-light" 
+     aria-label="Return to quiz category selection">Back to Categories</a>
+</div>
         </section>
       </div>
     </div>
